--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,21 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.left {
+	
+	width: 300px;
+	float:left;
+	margin-right: 15px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+
+}
+
+.right {
+	float:right;
+	width: 300px;
+	margin-left: 15px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
