--- a/styles/greg-page.css
+++ b/styles/greg-page.css
@@ -1,8 +1,4 @@
-.container {
-	padding-left: 10px;
-	padding-right: 10px;
-	
-}
+
 nav {
 	height: 60px;
 	width: 100%;
@@ -20,43 +16,99 @@ nav p {
 	font-size: 20px;
 }
 
+
+nav ul {
+	display: inline-block;
+	list-style: none;
+	float: right;
+}
+
 nav li {
 	
 	display: inline-block;
-	right: 90px ;
+	padding-right: 10px;
 	
-	align-items: right;
-	position: absolute;
 
 }
 
-/*nav ul {
-	display: inline-block;
-	align-items: left;
-
-
-
-nav li:after {
-	content: "";
-	margin-left: 120px;
-	
+a:hover {
+	text-decoration: underline;
 }
+
+.pages {
+
+ 	height: 20px;
+ 	width: 350px;
+ 	margin-left: 150px;
+ 	margin-top: 20px;
+ 	display: inline-block;
+ 	background-color: white;
+ 	border: 1px solid grey;
+ 	border-radius: 3px;
+ 	
+}
+
+/*.display:after {
+	content: "|"
+
+font-size: 16px;
+  	padding: 0 30px;
+  	padding: 8px 25px;
+  	border-left: 1px solid #DDDDDD;
+  	border-right: 1px solid #DDDDDD;
+
 }*/
+
+.button {
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top:15px;
+ 	padding-right: 15px;
+ 	border-radius: 10px;
+
+}
+body {
+
+
+}
 
 input[type=text] {
 	padding: 10px;
 	border: 2px solid red;
 	width: 300px;
 	height: 40px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: auto;
-	position: relative;
+	margin-left: 150px;
+	/*margin-right: auto;*/
+	margin-top: 100px;
+	
 
 }
 
 input[type=submit] {
-	padding: 10px;
+	padding: 0px;
+	margin-top: 100px;
+	height: 40px;
+	width: 40px;
 	cursor: pointer;
-	background: url(../images/outerspace_landscape.jpeg)
+	background: url(../images/outerspace_landscape.jpeg) ;
+}
+
+.list {
+	list-style: none;
+	margin-left: 90px;
+	margin-right: 200px;
+	/*padding: 20px;*/
+}
+.listdate {
+
+padding: 15px;
+}
+.listtitle {
+	/*padding: 15px;*/
+	margin-left: 10px;
+	margin-right: 10px;
+}
+.listlocation {
+	margin-left: 10px;
+	margin-right: 10px;
 }
